--- a/OmanDiscount/app/src/main/res/layout/activity_signup.xml
+++ b/OmanDiscount/app/src/main/res/layout/activity_signup.xml
@@ -45,6 +45,7 @@
                         android:layout_weight="5"
                         android:src="@drawable/user"/>
                     <EditText
+                        android:id="@+id/signup_username"
                         android:layout_width="330dp"
                         android:layout_height="wrap_content"
                         android:hint="Username"/>
@@ -61,6 +62,7 @@
                         android:layout_weight="5"
                         android:src="@drawable/signupemail"/>
                     <EditText
+                        android:id="@+id/signup_email"
                         android:layout_width="330dp"
                         android:layout_height="wrap_content"
                         android:hint="Email"
@@ -78,6 +80,7 @@
                         android:layout_weight="5"
                         android:src="@drawable/signupphone"/>
                     <EditText
+                        android:id="@+id/signup_phone"
                         android:layout_width="330dp"
                         android:layout_height="wrap_content"
                         android:hint="Phone"
@@ -95,6 +98,7 @@
                         android:layout_weight="5"
                         android:src="@drawable/password"/>
                     <EditText
+                        android:id="@+id/signup_password"
                         android:layout_width="330dp"
                         android:layout_height="wrap_content"
                         android:hint="Password"
